Заменяет Барбершоп на project

--- a/html-css.html
+++ b/html-css.html
@@ -108,7 +108,7 @@
             <div class="chapter-part-col gray-bgcolor">
               <figure>
                 <pre><code class="language-markup">&lt;!-- Правильно --&gt;
-barbershop/
+project/
   pictures/
     catalog/
       wine.jpg
@@ -133,7 +133,7 @@ barbershop/
   index.html
 
 &lt;!-- Неправильно --&gt;
-barbershop/
+project/
   assets/
     logo.svg
     icon-32x32.png
