Удаляет дубликаты у CSS

--- a/html-css.html
+++ b/html-css.html
@@ -797,7 +797,7 @@ ul >li {}
           <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="css-comma">Пробелы после запятых</h3>
-              <p>После запятых в перечислениях **должен** быть пробел .</p>
+              <p>После запятых в перечислениях <strong>должен</strong> быть пробел .</p>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
@@ -820,7 +820,7 @@ ul >li {}
           <article class="chapter-part">
             <div class="chapter-part-col">
               <h3 id="css-units">Единицы измерения</h3>
-              <p>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости. Например, <code>border:&nbsp;0</code>.</p>
+              <p>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости.</p>
             </div>
             <div class="chapter-part-col gray-bgcolor">
               <figure>
@@ -918,8 +918,8 @@ ul >li {}
             <div class="chapter-part-col">
               <h3 id="css-class-names">Имена классов</h3>
               <ul>
-                <li>Имена классов пишутся строчными буквами, используется дефис (но&nbsp;не&nbsp;знаки нижнего подчёркивания или camelCase). Дефисы служат разделителями во&nbsp;взаимосвязанных классах (например, <code>.button</code> и <code>.button-danger</code>).</li>
-                <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять какому элементу страницы задан класс: избегайте сокращений (единственное исключение&nbsp;&mdash; <code>.btn</code> для кнопок), но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
+                <li>Имена классов пишутся строчными буквами.</li>
+                <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять какому элементу страницы задан класс: избегайте сокращений, но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
                 <li>Для написания классов используются английские слова и&nbsp;термины. Транслитом названия классов и&nbsp;атрибутов не&nbsp;пишутся.</li>
               </ul>
             </div>
